assets/style/command.css
#command {
  background-color: rgba(0,0,0,0.7);
  color: #ddd;

  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 36px;
  padding: 0 18px;
}

